# django_tg_bot_framework

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGES.md  Dockerfile  README.md  contextvars_tools.py  decorators.py  docker-compose.yml  lint-single-py-file.sh  pyproject.toml
django_tg_bot_framework/: __init__.py  apps.py  models.py  state_machine.py  states.py  views.py
product_docs/: concepts.yaml  editable_messages_concepts.yaml  editable_states_concepts.yaml  main.yaml  state_machine_concepts.yaml
py-linters/: Dockerfile  pyproject.toml
sphinx_docs/source/: conf.py  index.rst  models.rst  routes.rst  state_machine.rst  states.rst  views.rst
tests/: settings.py  test_decorators.py  test_route_validation.py  test_router.py  test_state_machine.py  test_states.py  test_webhook_view.py
