[tool.poetry]
name = "django-tg-bot-framework"
version = "0.1.0"
description = "Framework for building telegram bots"
authors = ["Ilya Osipov <070809010@mail.ru>", "Evgeny Evseev <pelid80@gmail.com>"]
license = "GNU GPLv3"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
django = "^4"
tg_api = "1.0.0"

[tool.poetry.group.test.dependencies]
pytest-django = "4.5.2"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
autodoc-pydantic = "1.9.0"
sphinx-rtd-theme = "^1.3.0"
sphinx-autodoc-typehints = "^1.24.0"
sphinxcontrib-django2 = "^1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
